--- a/src/views/index.ejs
+++ b/src/views/index.ejs
@@ -5,8 +5,15 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+
+    <!-- link from public, due to viewEngine.js  -->
+    <link rel="stylesheet" href="/css/style.css">
 </head>
 <body>
-    <h1>hello</h1>
+    <h1>
+        <img src="/images/logo.png" alt="">
+        Hello I'm PHAT
+    </h1>
+
 </body>
 </html>
