--- a/src/views/news.ejs
+++ b/src/views/news.ejs
@@ -12,7 +12,7 @@
 <body>
     <h1>
         <img src="/images/logo.png" alt="">
-        Hello I'm PHAT
+        This is news page
     </h1>
 
 </body>
