--- a/src/views/index.ejs
+++ b/src/views/index.ejs
@@ -14,6 +14,11 @@
         <img src="/images/logo.png" alt="">
         Hello I'm PHAT
     </h1>
+    <ul>
+        <% users.forEach(function(user) { %>
+            <li>FirstName : <%- user.FirstName %></li>    
+        <% }); %>
+    </ul>
 
 </body>
 </html>
